# excel_exporter

./: .gitignore  .~lock.example_output.xlsx#  example.py  example_config.yaml  example_output.xlsx  main.py  pyproject.toml  readme.md  z_config1.yaml
configuration/: are_strings_grouped.py  cell_format.py  column.py  excel_configuration.py  group.py  load_config.py  sheet.py
example/: example.py
excel_exporter/configuration/: load_config.py
exporter/: apply_sheet_configs.py  create_excel.py  write_columns_data.py  write_columns_header.py  write_groups_header.py  write_sheet.py  write_update_time.py
format/: column.py  excel_configuration.py  load_config.py  sheet.py
images/: img02_data.pptx  img03_yaml.pptx
utils/: data_conversion.py
