[tool.poetry]
name = "excel_exporter"
version = "0.1.0"
description = "A excel exporter based on YAML configuration files"
authors = ["Bruno Santiago <brunomsantiago@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"
pandas = "^1.5.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
